# roblox-ai-vibe-coder

./: .gitignore  README.md  mock_mcp.py  pyproject.toml  roblox_ai.py  server.py
plugin/: Main.lua
tools/: definitions.py  lua_scripts.py  planner.py
tools/lua/: clear_logs.lua  clear_studio_logs.lua  configure_lighting.lua  connect_parts.lua  create_instance.lua  create_spawner.lua  create_timed_spawner.lua  create_ui_layout.lua  delete_instance.lua  edit_script.lua  edit_script_source.lua  find_instances.lua  generate_procedural_terrain.lua  generate_terrain.lua  get_logs.lua  get_object_info.lua  get_performance_stats.lua  get_properties.lua  get_spatial_summary.lua  get_stats.lua  get_studio_logs.lua  get_studio_state.lua  inject_script_template.lua  insert_asset.lua  inspect_service.lua  manage_tags.lua  manipulate_terrain.lua  modify_instance.lua  patch_script.lua  patch_script_source.lua  publish_game.lua  raycast.lua  raycast_check.lua  read_script.lua  read_script_source.lua  reparent_instance.lua  run_code.lua  run_tests.lua  run_unit_tests.lua  scatter.lua  (+6 more)
